Taking out the api key

--- a/address-verification-google-api.ipynb
+++ b/address-verification-google-api.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "#initialize google api\n",
-    "gmaps = googlemaps.Client(key = 'AIzaSyA9ihAhs5LRB7G1oa4lbJGbzE9iEglurXY')"
+    "gmaps = googlemaps.Client(key = 'enter your key here')"
    ]
   },
   {
